--- a/src/posts/emonics.mdx
+++ b/src/posts/emonics.mdx
@@ -1,7 +1,7 @@
 ---
 title: Senior Full Stack Developer (Emonics)
-abstract: Developed and maintained a delivery web application that increased revenue by 15% and user engagement by 20% within the first two months. Collaborated with designers and product owners to build security platforms that are safe from potential threats and vulnerabilities. Mentored and coached junior developers, improving team satisfaction score by 10% and increasing overall productivity.
-date: '2023-07-30'
+abstract: Spearheaded the development of a delivery web application, contributing to a 15% increase in revenue and a 20% boost in user engagement within the first two months. Collaborated with designers and product owners to establish robust security platforms, ensuring protection against potential threats and vulnerabilities. Mentored and coached junior developers, elevating team satisfaction by 10% and enhancing overall productivity.
+date: '2023-10-30'
 banner: /static/hello-world-banner.jpg
 featured: true
 ---
