--- a/src/posts/anduril.mdx
+++ b/src/posts/anduril.mdx
@@ -1,6 +1,6 @@
 ---
 title: Full Stack Developer (Anduril)
-abstract: Developed and deployed an e-commerce web application using MERN Stack, resulting in a 20% increase in sales within the first two months of launch. Optimized applications, reducing page loading time by 30% and improving system performance by 25% by utilizing modern web technologies such as React.js, Node.js and MongoDB.
+abstract: Developed and deployed an e-commerce web application using the MERN Stack. Optimized applications, reducing page loading time and improving system performance by leveraging modern web technologies.
 date: '2016-11-01'
 banner: /static/hello-world-banner.jpg
 ---
