--- a/src/posts/chewy.mdx
+++ b/src/posts/chewy.mdx
@@ -1,6 +1,6 @@
 ---
 title: Frontend Developer (Chewy)
-abstract: Wrote unit tests and automated tests platform, reducing the bugs by a 15% and increasing overall project quality. Collaborated with the UI/UX team to define and implement the user experience, resulting in a 20% increase in customer signups.
-date: '2018-08-30'
+abstract: Implemented unit tests and an automated testing platform, reducing bugs and enhancing overall project quality. Collaborated with the UI/UX team to define and implement a user-friendly experience, resulting in increased customer signups.
+date: '2017-08-30'
 banner: /static/hello-world-banner.jpg
 ---
