--- a/src/posts/merge.mdx
+++ b/src/posts/merge.mdx
@@ -1,6 +1,6 @@
 ---
 title: Full Stack Engineer
-abstract: Built Apollo Server with Express to handle GraphQL requests and increased performance by 20% in overall speed. Led development resulting in optimizing the frontend codebase and database schema and developing responsive web based application.
+abstract: Engineered an Apollo Server with Express to handle GraphQL requests, resulting in a 15% improvement in overall application speed. Led the optimization of the frontend codebase and database schema, contributing to the development of a responsive web-based application. Successfully resolved a critical production issue by conducting root cause analysis, collaborating with cross-functional teams, and implementing a solution, which resulted in a significant reduction in downtime.
 date: '2021-07-10'
 banner: /static/hello-world-banner.jpg
 ---
