--- a/src/posts/odesk.mdx
+++ b/src/posts/odesk.mdx
@@ -1,6 +1,6 @@
 ---
 title: Freelance Developer (oDeks)
-abstract: Developed various web-based applications using HTML, JavaScript, and CSS resulting in improved user experience and usability. Worked closely with design teams to build user-friendly UIs, resulting in 4 successful projects update release cycles.
-date: '2012-08-20'
+abstract: Developed diverse web-based applications, enhancing user experience and usability. Collaborated closely with design teams, resulting in successful project updates.
+date: '2013-04-20'
 banner: /static/hello-world-banner.jpg
 ---
