--- a/src/posts/workwell.mdx
+++ b/src/posts/workwell.mdx
@@ -1,6 +1,6 @@
 ---
 title: Web Developer (Workwell)
-abstract: Developed and deployed various e-commerce websites and booking web applications resulting in a 20% increase in revenue. Collaborated with front-end developers to create a user-friendly and high performance applications.
+abstract: Contributed to the development and deployment of various e-commerce websites and booking applications. Collaborated with front-end developers to create user-friendly, high-performance applications.
 date: '2015-04-30'
 banner: /static/hello-world-banner.jpg
 ---
